# ChangeLog for app-emulation/lxc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/lxc/ChangeLog,v 1.68 2015/03/13 08:54:55 dlan Exp $

  13 Mar 2015; Yixun Lan <dlan@gentoo.org> lxc-1.1.0-r4.ebuild:
  add ~arm keyword, test on cortex-a9 board

  12 Mar 2015; Markos Chandras <hwoarang@gentoo.org> lxc-1.1.0-r4.ebuild:
  Hide python specific code behind USE=python

*lxc-1.1.0-r4 (11 Mar 2015)

  11 Mar 2015; Markos Chandras <hwoarang@gentoo.org> +lxc-1.1.0-r4.ebuild:
  Respect USE=python so additional tools can be built. Bug #541932

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> lxc-1.0.7.ebuild:
  add arm64 support, tested on A53 board

  28 Feb 2015; Andrew Savchenko <bircoph@gentoo.org> metadata.xml:
  seccomp USE flag is now global, removing from metadata

  23 Feb 2015; Markos Chandras <hwoarang@gentoo.org> lxc-1.0.6-r1.ebuild,
  lxc-1.0.7.ebuild, lxc-1.1.0-r2.ebuild, lxc-1.1.0-r3.ebuild:
  Silence repoman warnings

*lxc-1.1.0-r3 (23 Feb 2015)

  23 Feb 2015; Markos Chandras <hwoarang@gentoo.org>
  +files/lxc-1.1.0-fix-gentoo-template.patch, +lxc-1.1.0-r3.ebuild:
  Switch default lxcpath to /var/lib/lxc. /etc/lxc was far too strange. Add
  patch to fix gentoo template stage3 detection code

*lxc-1.1.0-r2 (17 Feb 2015)

  17 Feb 2015; Markos Chandras <hwoarang@gentoo.org> +lxc-1.1.0-r2.ebuild,
  -lxc-1.1.0-r1.ebuild, -lxc-1.1.0.ebuild:
  Revbump to use correct systemd file. Bug #540076. Drop old

*lxc-1.1.0-r1 (15 Feb 2015)

  15 Feb 2015; Markos Chandras <hwoarang@gentoo.org> +files/lxc_at.service.2,
  +lxc-1.1.0-r1.ebuild:
  Since 1.1.0, guests are started in daemon mode so adapt the systemd service
  file. Also add missing Delegate=yes to facilitate systemd containers. Bug
  #540076 by Joachim Herb

  08 Feb 2015; Markos Chandras <hwoarang@gentoo.org> lxc-1.1.0.ebuild:
  Add another kernel config check for CHECKPOINT_RESTORE

*lxc-1.1.0 (08 Feb 2015)
