@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 3.4/syslog-ng.conf.gentoo 1332 SHA256 949c0f2a9f4351be23249ba1b7763b5d4ff9ab4907c1211cc3e92b6bc9705c8e SHA512 bdbcfa27368ed75daac153d91c50555bea892f492639a2448e47a6f38a9b84808eedd35db09347a385c70725ab8349798f624aa5e2f730fb99b2986d05afb1a4 WHIRLPOOL d639db780aa07438e1a33b85cf3f388782f84fe884b95303605ccd58bf95232e5e013c5d491b44034e7d90121064b9c749d91c2fa6352ccb44db90d12d792d82
 AUX 3.4/syslog-ng.conf.gentoo.fbsd 727 SHA256 d45f4befbf3f098a4a3e7bff80a6536931c3386eb94145f8e7495d9eb8ece0fc SHA512 a8f94d3cd4f120c3cb69f4e938877f62e87f7a6a3f422575e130b49ed3fa37effc6dc0c53398031602f9bcf26a1ce3b5267701483f045829960796098e843fb0 WHIRLPOOL 37ceec9bb7a1cc829b1eeb1aa8e9af162b67e90e03d862bc215150e011ad8be433270d658029fd72963d2486c72f5046e9d6e007a62f170c1295d61d68b62ca4
 AUX 3.4/syslog-ng.conf.gentoo.hardened 4658 SHA256 5efb3976249fd44d01af2c287f35e9c3a61e74909b4f7d9f63dabc32eb4e3f74 SHA512 d326832592b016b3fec1119ff90c4898fc4351bbeccff32295712229e955b72ea80a282cbcb527862371c5899446ee4747f95fe898e36338c47683121598140e WHIRLPOOL e1eb845712cbff8a3a3f656689b1c8a1573882cc9850211bba22eb5cf46adc2337799fa4992d17e5e32a67ea7ae4f7ff65034dcb1606a6ccb82f565d1ef80098
@@ -17,6 +20,15 @@ AUX syslog-ng.logrotate.in 345 SHA256 7e854cbac5b376b3d1d6906fed4cff794e17998c04
 DIST syslog-ng_3.4.8.tar.gz 3169372 SHA256 96c2f970fbba4fdd7659b1fee5e476d2858c911d4304d42099f495493762ff49 SHA512 23ba9908664e594c186cbe4bd5dcfb5d2ed3faf02ec45b931bb91b078660547989c2340a08b478a33adb530d39a6d6f39a2e7519107a3f6b923ac9f39529620e WHIRLPOOL 1085fa2c90e0c85421c64ed50e8a357f29006afea2f3e329e42d1e27f4210a10fe0f05d4af95a11c245d68b43644a4a829a50c05b7d541f59a6f580b3643b434
 DIST syslog-ng_3.6.2.tar.gz 3207456 SHA256 ef47fada52981e09af570457a5af30f815f5d5b6c2e33754cedd4ca9780d8261 SHA512 15603b4df2001e1ce7e0019d0dd9a0f4295445e3fd19a527ebf3d49486da7da27fac6c465727ec0354f8f70ca0f671a285ec132f9aa0de62b40f18b44af2a226 WHIRLPOOL 7135db242374d6e5789c0820a06187b7e325054fd214e3aee75aac5b8dde56786b432cc4519c07ce0cd413c3a560e8e74ee6eca319c21eaa750ca8140ef1b63f
 EBUILD syslog-ng-3.4.8.ebuild 3588 SHA256 2bf7cb39b5486e7a6b95834ad87ec19a0d00e93126fc57dd826b6bebc3e9e844 SHA512 32eadb10f65970756a30d852dcb14bf0296425e5c256182956d3cc42b8571c46df3a293da40a9ff730046252a3e078413e11543176c39586d5dbcea970e41939 WHIRLPOOL ebbb2b786c6061017d0a69878fb6811d7b97495f948e5c46d8dff695281b864e6f8a8d177f71c7a75652905f4f511c479e26868ccebb7838c211a8dda8ecfc9d
-EBUILD syslog-ng-3.6.2.ebuild 3822 SHA256 5bbd53a0fc84d8e0f5a108cce466beac0dbff3e0d5a787bb040aae9b74b3185d SHA512 14a3368135c8e06f80a4a65da4754a381ca3f179c543ea5069c005ddefe541957e298f48a24aa1c609223b192849cddb18939bab1ab60c0c91fc61f30af1d42a WHIRLPOOL 3bf40fb42587ad510849851aaf29c77e654b0857257742152c2d11c4ac2e4d1cad24d7168f699ba16bf79267d36313394ff2ffc69f94840bb186d89ec5a96a9b
-MISC ChangeLog 58408 SHA256 3a4c2668604ac76ca669e1d90d1a876c885230ff68dea1a58a411466883f02d4 SHA512 a9d60782f1dc32159af2e4e79bdf37d86d47da19bfef2cfc3f202f7de2d0310cb96c467c57830c72631afd072000d6dde33d8163ab69c6b4b2deb39837d15a49 WHIRLPOOL dbc55ceaba617e96f4c26e301bb8a095c9e3166b22f03999d2d10d63704d956f9fdeac1dbe534cb81daad621349f0433eacf6eb469e68efdb7967be5b109a104
+EBUILD syslog-ng-3.6.2.ebuild 3819 SHA256 642f5c8af291761de813495ece4abce02ef1f678a0b9c7df845d3498b221309d SHA512 3649c058d09921777ecd1637362f32c4f920395910f0715eb5bfec3e121bc6ffd474ef106415a547774c2bc3fe77e50d5822f621b825776b805c4df4af1fb952 WHIRLPOOL 87fb40a677769f63f8cb192d8ec351cad418dd2c2ddf790fe8ab1453f5ff972606b33cddc5734ace4d027ac55b8847ec59c13f3792d9f1a3a769a9a090ed1b2a
+MISC ChangeLog 58512 SHA256 b59245b89c07eaf057ec416bb55637d4bcc173c809db50734b020df89ab9bc74 SHA512 69298b586759ff2b89594ba288d1a8ad24f31accace5ee6e4fc0077105bfc5767a4f4adc83e3d0cbd258e84cbc020c948f31ae9139fe9a568ae2bc6c2e2a785b WHIRLPOOL aed65ade2add23150c05d82c7338f4b30041f906eca938f1e2e1b7881d499285400dac92a58e4e6c122b9bcf4ad620e7c88b6468f2058a9e04b88fa4cff67879
 MISC metadata.xml 792 SHA256 9116bcafb5bc0f8cb3e27e43b474bb387de0467f47fe81f2a2da462cd1438834 SHA512 d81f3f86da8fa594eca1b2224ffe4e07c467f63aee77273b91df7b91256d54653c70b1a3c6543f1a6ce51594f75fdb4245d4ad6766d687275efe7b1811b317a4 WHIRLPOOL efc50cd99fe30a65e83b180794e3d9f58e09f6680c14ea038e09746f414b83c5ba3380d0c6796cca254a4ab81ce676f9dbdefb577abc5a39a26281a8ef9010d2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iJwEAQEIAAYFAlUD+GMACgkQG9wOWsQutdYMLQP+J1RtJM5BMAq240WQphYfcyID
+NclHGl7ts0uONX3xHZiL6ks2m4+DsIVlaUDu6J9Ga1oYYjl5gKRebZ64dpWN5MGc
+1LDmYGmWCJwlBJQW5OkdcS+0YBGySMIcQUAYsU0sC25j2Rdei6eUr2AyQmLx4GbH
+gcs7+5SEApsdXx0Oeyk=
+=vdUd
+-----END PGP SIGNATURE-----
