@@ -15,22 +15,25 @@ EBUILD lxc-1.0.7.ebuild 5922 SHA256 91ac06c4a1094697e86ebf85403faa83db155b7c71f5
 EBUILD lxc-1.1.0-r2.ebuild 5737 SHA256 5a61ff7dee0c4fa4abb271d741b5a927b046f876bfe45c4861190ec099ecf8e5 SHA512 a84e5b7435e09f6d21c7a5afa7ec3fc779f195562bb9e77990c4bd6378b64e26a6617d693399abb29f3a97bdc2b387add6a5a1db52544771d8035c2dd692ce68 WHIRLPOOL db6f2033329d3fabb7868d4c777efd803fb8b50d3c601eb2f0b62a991a2c94e0c4444c9dea45eba43dc86d5c6c8f224985aedfaabb89bd3064744b7e6f999316
 EBUILD lxc-1.1.0-r3.ebuild 6061 SHA256 6e578ef49d4576f28c52e0b62cde6ef43ca60a0e343812b59c86b3793f207f64 SHA512 f4bb0b0d84c272654b2f2ade7c795648f4cb6bd192aca3f3fa0390fc752dd3c64b4dea17b983f7bc523464b5ae04ef8933871a504529def1bc256f0809afb1f1 WHIRLPOOL 29dc33088aeddcf5d34f289aa8547094d089d0b2e83b406495e908a9a7cf27c31b97bb140f0c4cb59cf3d1c3c9efa5fe16dedf1ca8ef56d6e3cf8dfe4c391d4b
 EBUILD lxc-1.1.0-r4.ebuild 6063 SHA256 f48a5f117eb2a554549e68e9caa8660455406d5bb24a92bf9702be0e8aefcc63 SHA512 9691a3b8c674343c9b86d943e6840231820cd2453e6fba57f75417fdf280de7571137b2ef3dfe6c1ca913d04e9d02cbfaf083e61cf4b0600dd448208b8d1287b WHIRLPOOL 8dd8733bffb85f29b02d516eb5043c60d3655c2209c31eafaa2bb84ac485f7a4e0315a34b455c4960577722522b95a9b021ddca8f383f23272206471c421d6d8
-MISC ChangeLog 14014 SHA256 bb2863a958513fa16e324a1901bc9857fc0aca53c9f51998e8b1696436bedc30 SHA512 a9159f34933f3bf9174b448be9b6966c2a83c12429be8bc08286e3d5f8b969318a86c56f0d2e5dee308d9b0bcb21d4758855e4c730ebbffd3314b52ea80e5d7a WHIRLPOOL 17eeb99b4d4acbbf779ff50d9beccc9adde9e99f3e01af77bed45e79d173d0b3c36e4cb5d6cadfc17dac880bc42d382499516b45a82cba71690e631fdfaaf640
+EBUILD lxc-1.1.0-r5.ebuild 6089 SHA256 edfa640a70472632cba434fb16068c65083a320582d396965b61b94ef222e78b SHA512 a65a1a1de30dc0fbc4cb3430e98ab9b53b7abca57d1032afcb4b871745bfd61ad97d03147166d158ae09f8c0a1f6b49143e7c694726308f8602ac3e928c993c2 WHIRLPOOL db43ef49e8c6f0fafafb74fdc59783aa44519622120be8593ffb90c72d5763e76592ba14b4823234f9c10a23a23e03279722f4a1bf37e286e9d1a93396d317ee
+MISC ChangeLog 14204 SHA256 7c93a02186515e371f84dd559fcd8550f6a047cf65c6aa54bf9c881bc456bf4f SHA512 188b427bebc8b018064545106541394e07f42a91efa1b981f7bb319777e93be7fb4989cc3a254da29ce1c895144d52511ac2ab5811da9327d86d2c0b92ddc699 WHIRLPOOL 0f61faaf8dfb1d66fac5c762e102d27b77f06a984de0d8a8e610f8a79c5fb238917e15058023e700adabeaf5c880232471899ffa5eca7c7f33d683a0248a03c3
 MISC metadata.xml 505 SHA256 b73ca71fcfe6d4f1e60053cbb74193f42175f9679f9a6126b656a5723c8bc45b SHA512 217f2d296d2d23b6c5c8462e74554b7ba3c57d76eb363b4f69be2f47173caee45878b0cea98d024ff4c6cf5e1ba2e9b0de3882ab12efb5b6357598a337af0c78 WHIRLPOOL 174c2bad87f51a5fd8cdaed0e068a8f26998b9a4b9959ad2192f4b14b5253c41ffcf9c0baa04233f1cd74dcf6198fe8fa40e12a4f6c13fd4cb70638e1bc6e0a9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVAqXsAAoJEJIMDbyqvv1Vjx8P/19a6T7l2hNUO7Sk/EeuO0IM
-bFhbFKIzkb3ZmB4axzM/DPqroRIoippmrUyuWj2GNJziSZJKIKvoINebLL5BUjjO
-0nDKQUblqcuTi/tPSTMb7JFzp0Sv5yYChvONnXYsq2HFgAlrM7yuiuwbUYRGtHVA
-+47RUi6ugzdYhQT4mcaY+MyHk9XHchE4lR5oTZSr0EImOOyZBQuMEEiWgzVN4Qfn
-js9vWJRYGAXBM6jMQeIsllqlm2WpcLK068bgKS5IQsd2kivZaIj+8wL4UhFc7NDZ
-bjGLh+DMMl3w62fq6ZPXlEzkH772Bt06BPM9H9u8caeA87+NPP2pX7yfbw6HWC+8
-UHNIDQuAvSxtSmly1BlFalL1wtvleISqvL4oDMfU0SpLICfsPRhIwj6zW8maYXzz
-KO7AhtnATTm9Hr0D1sIGdgk3bOpuMrFc324qqhX8Vi50tHmQAW06M2ptP5CYxOWx
-ANLNhz0xs5Z9yPBQ3bqbmRyP9aCFmRB6HXktFPXDHmQtfDtOjBem0RPGjN+o5adq
-4NduDviGtKKYqTYwjPyLOViuc5jYQyDCUFEGi+RUqgC6laO7bkhOcFN8kKhQUSCt
-wAcotx0titIz996YHMvHRvyYldlVEadrkTWcoFhPFbSnwe+TMqOQqidANT16WZEH
-TMgA+Pc7bVT7GJGalPrA
-=KYRf
+iQJ8BAEBCABmBQJVA/2cXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88sgYQANNjsiNI8hbz5q0aXMZgV7Hf
+2btPDC3JwVdk09OjdXG0fUcdKQ5d8Z5HDVpjAa89kq7TBNxblkZf6VrqnyArgQIW
+YjLDUko7iBJ6DEhqLOwtwf88pL+eHnko/8fq9WFQFTJjmfTkHBn4nOU+hkHa0cDi
+C2AnFyQgFqfke/Kx4ZJoae7m/0cvviN65cdW9ktjyhH1I2uFekpCGnbCDfcn1Rwe
+PbSeEzL37FuzAIqgKlAJ3O56ue2mnymVQCA9QApd0UKAQyBkt8iJZl+MFqu4vAd9
+CgKouGJaIwqlUlgrnkwBdqGH4G2jIynoh7uAJNbuvl5XvgANZ4EaymsC2zfHcQ/S
+3Ua2KsTBBJHbyV4+bHfQkMid0V0H70O3xsgy4sZ/JxkrVZXXB/E+E0Mh2QVavfyJ
+AK0YgH4cgcpruOz7KcU5Fa9hMEKFDvGc4LYwEPW3Szja+rnNSsPbs8rddaYOyjs5
+H+Z17/pv0EPaQqtuV60LzQzxEIVnXhNyWJfvb14SMdiRzlrsG6lWEfxSduy6YXV8
+cOfOEgQC+CNnubiLCkHQ/3yyhpzHhY5xuVijHB6RbTkSqqYAWOjdLsh9Qyz/S9tU
+CRChq+GWCLf0Jm1NfJ0sdrXnRNShoOoLo1/n0h5W7i0/R0pKowTu51RtCoaVKHe9
+/dIqG+6dIMQGPwqe2rEM
+=FMXP
 -----END PGP SIGNATURE-----
