@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst prepare setup
+DEPEND=net-libs/gnutls sys-libs/libcap cgmanager? ( app-admin/cgmanager ) lua? ( >=dev-lang/lua-5.1:= ) python? ( python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_python3_4? ( dev-lang/python:3.4 ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)] ) seccomp? ( sys-libs/libseccomp ) doc? ( app-text/docbook-sgml-utils ) >=sys-kernel/linux-headers-3.2 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 virtual/pkgconfig
+DESCRIPTION=LinuX Containers userspace utilities
+EAPI=5
+HOMEPAGE=https://linuxcontainers.org/
+IUSE=cgmanager doc examples lua python seccomp python_targets_python3_3 python_targets_python3_4
+KEYWORDS=~amd64 ~arm
+LICENSE=LGPL-3
+RDEPEND=net-libs/gnutls sys-libs/libcap cgmanager? ( app-admin/cgmanager ) lua? ( >=dev-lang/lua-5.1:= ) python? ( python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_python3_4? ( dev-lang/python:3.4 ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)] ) seccomp? ( sys-libs/libseccomp ) sys-process/criu sys-apps/util-linux app-misc/pax-utils virtual/awk
+REQUIRED_USE=python? ( || ( python_targets_python3_3 python_targets_python3_4 ) )
+SLOT=0
+SRC_URI=https://github.com/lxc/lxc/archive/lxc-1.1.0.tar.gz
+_eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	linux-info	2b8c53f6065bdee2d757472215a3088f	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	331701099758706863819fe3ff6ddc8a	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=06d69be71a18e8ba271d30d7884b75f9
